--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -1,24 +1,14 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import CallToAction from '../components/CallToAction.astro';
+import Layout from '../layouts/Layout.astro';
 ---
-
 <Layout title="Contacto">
-  <div class="tratamiento flex flex-wrap justify-center m-20">
-    <h1>Registro</h1>
-    <form method="POST">
-      <label>
-        Usuario:
-        <input type="text" name="username" required />
-      </label>
-      <label>
-        Correo electrónico:
-        <input type="email" name="email" required />
-      </label>
-      <label>
-        Contraseña:
-        <input type="password" name="password" required minlength="6" />
-      </label>
-      <button>Enviar</button>
-    </form>
+  <div class="flex flex-wrap justify-center m-20 flex-col">
+    <h2>Interesado en algun tratamiento?</h2>
+    <div class="bg-pink-300 w-1/2">
+      <CallToAction href="mailto:munaydepyspa@gmail.com">
+        Envianos un mensaje
+      </CallToAction>
+    </div>
   </div>
 </Layout>
