--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@
     <ul class="flex justify-center gap-6 md:gap-8 pb-3">
       <li>
         <a
-          href="/"
+          href="https://www.facebook.com/profile.php?id=61550610241250"
           rel="noreferrer"
           target="_blank"
           class="text-gray-700 transition hover:text-gray-700/75"
@@ -33,7 +33,7 @@
 
       <li>
         <a
-          href="/"
+          href="https://www.instagram.com/munaydepy/"
           rel="noreferrer"
           target="_blank"
           class="text-gray-700 transition hover:text-gray-700/75"
