--- a/src/pages/reductores.astro
+++ b/src/pages/reductores.astro
@@ -6,22 +6,22 @@ const tratamientos = [
   {
     price: "$30",
     title: "L masaje manual + drenaje lim + manta térmica",
-    img: "/1.jpg",
+    img: "/reductores/re1.jpeg",
   },
   {
     price: "$30",
     title: "M masaje manual + radiofrecuencia + carboxi",
-    img: "/1.jpg",
+    img: "/reductores/re2.jpeg",
   },
   {
     price: "$30",
     title: "V masaje manual + radiofrecuencia + carboxi",
-    img: "/1.jpg",
+    img: "/reductores/re3.jpeg",
   },
   {
     price: "$20",
     title: "Drenaje linfático",
-    img: "/1.jpg",
+    img: "/reductores/re4.jpeg",
   },
 ];
 ---
