--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -34,9 +34,9 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 		sizes="192x192"
 		href="/ISOLOGO1.png"
 	/>
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+	<link rel="icon" type="image/png" sizes="32x32" href="/ISOLOGO1.png" />
+	<link rel="icon" type="image/png" sizes="96x96" href="/ISOLOGO1.png" />
+	<link rel="icon" type="image/png" sizes="16x16" href="/ISOLOGO1.png" />
 	<meta name="msapplication-TileColor" content="#2b5797" />
 	<meta name="theme-color" content="#ffffff" />
 
