--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ const currentPath = pathname.slice(1);
         <ul class="flex items-center gap-6 text-sm">
           <li>
             <a
-              class={currentPath === "general" ? "active" : "link"}
+              class={currentPath.includes("general") ? "active" : "link"}
               href="/general"
             >
               Tratamientos Generales
